kubernetes/uptime-kuma/base/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: uptime-kuma
  namespace: uptime-kuma
  labels:
    app: uptime-kuma
spec:
  replicas: 1
  serviceName: uptime-kuma
  selector:
    matchLabels:
      app: uptime-kuma
  template:
    metadata:
      labels:
        app: uptime-kuma
    spec:
      securityContext:
        fsGroupChangePolicy: "OnRootMismatch"
      enableServiceLinks: false
      restartPolicy: Always
      schedulerName: default-scheduler
      dnsPolicy: ClusterFirst
      automountServiceAccountToken: false
      serviceAccountName: uptime-kuma-sa
      containers:
        - name: uptime-kuma
          image: docker.io/louislam/uptime-kuma:2.5.5-rootless@sha256:c4e17ce033deb811aff8a61a5f8f736f35b1bd937458ddeec46c59ca190f0e03
          command:
            - /bin/sh
            - -c
            - |
              sh /opt/seeder/seed_monitors.sh &
              exec node server/server.js
          securityContext:
            allowPrivilegeEscalation: false
            privileged: false
            readOnlyRootFilesystem: false
            runAsNonRoot: true
            seccompProfile:
              type: RuntimeDefault
            capabilities:
              drop:
                - ALL
          ports:
            - name: http
              containerPort: 3001
          resources:
            requests:
              memory: "256Mi"
              cpu: "15m"
            limits:
              memory: "512Mi"
              cpu: "300m"
          volumeMounts:
            - name: uptime-kuma-pvc
              mountPath: /app/data
            - name: seeder-vol
              mountPath: /opt/seeder
          startupProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
            failureThreshold: 30
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 30
            periodSeconds: 15
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 15
            periodSeconds: 10
      volumes:
        - name: uptime-kuma-pvc
          persistentVolumeClaim:
            claimName: uptime-kuma
        - name: seeder-vol
          configMap:
            name: uptime-kuma-seeder
