kubernetes/uptime-kuma/base/mariadb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mariadb
  namespace: uptime-kuma
spec:
  ports:
    - name: mysql
      port: 3306
      targetPort: mysql
  selector:
    app: mariadb
