kubernetes/uptime-kuma/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: uptime-kuma
  namespace: uptime-kuma
  labels:
    app: uptime-kuma
spec:
  host: uptime-kuma.apps.okd.claffey.cloud
  to:
    kind: Service
    name: uptime-kuma
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
